--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   Here, I hope to highlight some of my projects.  
   <br><br>
   <a href="https://www.linkedin.com/in/lena-burdick/">View My LinkedIn Profile</a> 
+  <a href="https://www.upwork.com/freelancers/~01874dec4abeeccd82?mp_source=share">View My Upwork Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: G-E7VSJZ86MM # your Google Analytics tracking ID here
